# stitchkit

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
crates/muscript-analysis/src/: environment.rs  ir.rs  type_system.rs
crates/muscript-foundation/src/: lib.rs  source_arena.rs
crates/muscript-lexer/src/: lib.rs  sliced_tokens.rs  sources.rs
crates/muscript-syntax-derive/src/: parse.rs  predictive_parse.rs
crates/muscript-syntax/src/: lib.rs  list.rs  parsing.rs  token.rs
crates/muscript/src/: parse.rs
crates/stitchkit/: Cargo.toml
crates/stitchkit-archive/src/: lib.rs
crates/stitchkit-core-derive/src/: lib.rs
crates/stitchkit-core/src/: binary.rs  lib.rs  primitive.rs
crates/stitchkit-manifest/: Cargo.toml
crates/stitchkit-manifest/src/: lib.rs  writer.rs
crates/stitchkit-reflection-types/src/: chunk.rs  class.rs  default.rs  function.rs  lib.rs
crates/stitchkit/examples/: create_archive.rs
crates/stitchkit/src/: ardump.rs
docs/: archive-format.md
docs/muscript/: impl-design.md  incompatibilities.md
muscript/: Cargo.toml
muscript-analysis/: Cargo.toml
muscript-analysis/src/: ast.rs  class.rs  diagnostics.rs  environment.rs  function.rs  ir.rs  lib.rs  package.rs  source.rs  type_system.rs
muscript-analysis/src/class/: namespace.rs  untyped.rs  var.rs
muscript-analysis/src/function/: builder.rs  expr.rs  mangling.rs  stmt.rs
muscript-analysis/src/ir/: basic_block.rs  dump.rs  insn.rs  interpret.rs
muscript-analysis/src/partition/: class.rs
muscript-foundation/: Cargo.toml
muscript-foundation/src/: errors.rs  ident.rs  lib.rs  source.rs  source_arena.rs  span.rs
muscript-frontend/: Cargo.toml
muscript-frontend/src/: lexer.rs  lexis.rs  lib.rs  parsing.rs
muscript-ir/: Cargo.toml
muscript-lexer/: Cargo.toml
muscript-lexer/src/: lexer.rs  lib.rs  sources.rs  token.rs  token_stream.rs
muscript-parsing/: Cargo.toml
muscript-parsing-derive/: Cargo.toml
muscript-parsing-derive/src/: lib.rs  parse.rs  predictive_parse.rs
muscript-parsing/src/: ast.rs  diagnostics.rs  lexis.rs  lib.rs  list.rs  parsing.rs
muscript-parsing/src/ast/: class.rs  cppblob.rs  default_properties.rs  expr.rs  file.rs  item.rs  meta.rs  path.rs  specifiers.rs  stmt.rs  types.rs
muscript-parsing/src/ast/expr/: lit.rs
muscript-parsing/src/ast/item/: consts.rs  cpptext.rs  default_properties.rs  enums.rs  function.rs  replication.rs  simulated_hack.rs  state.rs  structs.rs  var.rs
muscript-parsing/src/ast/stmt/: control_flow.rs  local.rs
muscript-parsing/src/cst/: item.rs
muscript-parsing/src/cst/expr/: lit.rs
muscript-parsing/src/cst/item/: default_properties.rs  simulated_hack.rs  structs.rs  var.rs
muscript-parsing/src/cst/stmt/: local.rs
muscript-parsing/src/diagnostics/: sink.rs
muscript-parsing/src/lexis/: lexer.rs  peek_cache.rs  preprocessor.rs  token.rs  token_stream.rs
muscript-parsing/src/lexis/token/: delimiter.rs  keyword.rs
muscript-parsing/src/parsing/: base.rs  diagnostics.rs  keyword.rs  list.rs  recovery.rs
muscript-parsing/src/parsing/ast/: class.rs  file.rs  item.rs  types.rs
muscript-parsing/src/parsing/ast/item/: function.rs  var.rs
muscript-parsing/tests/lex/: InvalidScientificNotation.uc  ValidBlockCommentTwoStars.uc
muscript-parsing/tests/lex/preprocessor/: EmptyMacro.uc  GatedVariable.uc  Transparent.uc
muscript-parsing/tests/parse/function/: ArrayFunction.uc  EmptyFunction.uc  EmptyStmt.uc  IntFunction.uc
muscript-parsing/tests/parse/struct/: EmptyStruct.uc  VectorSeparateFields.uc
muscript-preprocessor/: Cargo.toml
muscript-preprocessor/src/: lib.rs  sliced_tokens.rs
muscript-syntax/: Cargo.toml
muscript-syntax-derive/: Cargo.toml
muscript-syntax-derive/src/: common.rs  lib.rs  parse.rs  predictive_parse.rs  spanned.rs
muscript-syntax/src/: diagnostics.rs  lexis.rs  lib.rs  list.rs  parsing.rs  sources.rs
muscript-syntax/src/cst/: class.rs  cppblob.rs  default_properties.rs  expr.rs  file.rs  item.rs  meta.rs  path.rs  specifiers.rs  stmt.rs  types.rs
muscript-syntax/src/cst/expr/: lit.rs
muscript-syntax/src/cst/item/: consts.rs  cpptext.rs  default_properties.rs  enums.rs  function.rs  named.rs  replication.rs  simulated_hack.rs  state.rs  structs.rs  var.rs
muscript-syntax/src/cst/stmt/: control_flow.rs  local.rs
muscript-syntax/src/lexis/: lexer.rs  preprocessor.rs  token.rs  token_stream.rs
muscript-syntax/src/lexis/token/: keyword.rs  parsing.rs
muscript-syntax/src/parsing/: lazy.rs  recovery.rs
muscript-syntax/src/token/: keyword.rs  parsing.rs
muscript-syntax/tests/lex/preprocessor/: Peekathon.uc
muscript-syntax/tests/parse/: EmptyClass.uc  RootClass.uc
muscript-syntax/tests/parse/expr/: Shifts.uc
muscript-syntax/tests/parse/recover/: TwoBlocks.uc
muscript-syntax/tests/parse/struct/: VectorMultiFields.uc
muscript-syntax/tests/parse/var/: VarEditor.uc
muscript/src/: input.rs  main.rs  parse.rs
src/: ardump.rs  main.rs
stitchkit/: Cargo.toml
stitchkit-archive/: Cargo.toml
stitchkit-archive/src/: binary.rs  compression.rs  flags.rs  hat.rs  index.rs  lib.rs  name.rs  sections.rs  string.rs  welder.rs
stitchkit-archive/src/binary/: macros.rs  structure.rs
stitchkit-archive/src/sections/: compression.rs  dependency_table.rs  export_table.rs  import_table.rs  name_table.rs  summary.rs
stitchkit-archive/src/sections/dependency_table/: unlinked.rs
stitchkit-archive/src/sections/name_table/: builder.rs
stitchkit-core/: Cargo.toml
stitchkit-core-derive/: Cargo.toml
stitchkit-core-derive/src/: deserialize.rs  lib.rs  serialize.rs
stitchkit-core/src/: binary.rs  context.rs  flags.rs  lib.rs  primitive.rs  string.rs
stitchkit-manifest/src/: lib.rs  structure.rs  writer.rs
stitchkit-reflection-types/: Cargo.toml
stitchkit-reflection-types/src/: chunk.rs  class.rs  default.rs  enums.rs  field.rs  function.rs  lib.rs  object.rs  property.rs  state.rs  structs.rs  text_buffer.rs
stitchkit-uscript/: Cargo.toml
stitchkit/examples/: create_archive.rs
stitchkit/src/: ardump.rs  main.rs  manifest.rs  muscript.rs  objdump.rs
(+82 files in other folders)
