[workspace]
members = [
    "stitchkit",
    "stitchkit-archive",
    "stitchkit-core",
    "stitchkit-core-derive",
    "stitchkit-reflection-types",
    "stitchkit-manifest",
]

[workspace.dependencies]
anyhow = "1.0.69"
bitflags = "2.0.0-rc.3"
uuid = "1.3.0"
tracing = "0.1.37"
thiserror = "1.0.38"

stitchkit-archive = { path = "stitchkit-archive" }
stitchkit-core = { path = "stitchkit-core" }
stitchkit-core-derive = { path = "stitchkit-core-derive" }
stitchkit-reflection-types = { path = "stitchkit-reflection-types" }
stitchkit-manifest = { path = "stitchkit-manifest" }
