[workspace]
members = [
    "stitchkit",
    "stitchkit-archive",
    "stitchkit-core",
    "stitchkit-core-derive",
    "stitchkit-reflection-types",
    "stitchkit-manifest",

    "muscript",
    "muscript-analysis",
    "muscript-foundation",
    "muscript-syntax",
    "muscript-syntax-derive",
]

[workspace.dependencies]
anyhow = "1.0.69"
bitflags = "2.0.0-rc.3"
clap = "4.1.5"
indoc = "2.0.0"
ref-cast = "1.0.15"
uuid = "1.3.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
thiserror = "1.0.38"
walkdir = "2.3.2"

stitchkit-archive = { path = "stitchkit-archive" }
stitchkit-core = { path = "stitchkit-core" }
stitchkit-core-derive = { path = "stitchkit-core-derive" }
stitchkit-reflection-types = { path = "stitchkit-reflection-types" }
stitchkit-manifest = { path = "stitchkit-manifest" }
stitchkit-uscript = { path = "stitchkit-uscript" }

muscript-analysis = { path = "muscript-analysis" }
muscript-foundation = { path = "muscript-foundation" }
muscript-syntax = { path = "muscript-syntax" }
muscript-syntax-derive = { path = "muscript-syntax-derive" }
