[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.69"
bitflags = "2.0.0-rc.3"
clap = "4.1.5"
indoc = "2.0.0"
ref-cast = "1.0.15"
uuid = "1.3.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
thiserror = "1.0.38"
walkdir = "2.3.2"

stitchkit-archive = { path = "crates/stitchkit-archive" }
stitchkit-core = { path = "crates/stitchkit-core" }
stitchkit-core-derive = { path = "crates/stitchkit-core-derive" }
stitchkit-reflection-types = { path = "crates/stitchkit-reflection-types" }
stitchkit-manifest = { path = "crates/stitchkit-manifest" }
stitchkit-uscript = { path = "crates/stitchkit-uscript" }

muscript-analysis = { path = "crates/muscript-analysis" }
muscript-foundation = { path = "crates/muscript-foundation" }
muscript-lexer = { path = "crates/muscript-lexer" }
muscript-preprocessor = { path = "crates/muscript-preprocessor" }
muscript-syntax = { path = "crates/muscript-syntax" }
muscript-syntax-derive = { path = "crates/muscript-syntax-derive" }
