[package]
name = "muscript-lexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = { workspace = true }
indoc = { workspace = true }
muscript-foundation = { workspace = true }
thiserror = { workspace = true }
