[package]
name = "muscript-parsing"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = { workspace = true }
indoc = "2.0.0"
thiserror = { workspace = true }
tracing = { workspace = true }
unicase = "2.6.0"

muscript-foundation = { workspace = true }
muscript-parsing-derive = { workspace = true }
