[package]
name = "muscript-syntax"
version = "0.1.0"
edition = "2021"

[features]

# Enables capturing of parse rule tracebacks into diagnostics.
parse-traceback = []

[lib]
crate-type = ["dylib"]

[dependencies]
bitflags = { workspace = true }
indoc = "2.0.0"
thiserror = { workspace = true }
tracing = { workspace = true }

muscript-foundation = { workspace = true }
muscript-syntax-derive = { workspace = true }
