[package]
name = "muscript-syntax"
version = "0.1.0"
edition = "2021"

[features]

# Enables capturing of parse rule tracebacks into diagnostics.
parse-traceback = []

[dependencies]
bitflags = { workspace = true }
indoc = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

muscript-foundation = { workspace = true }
muscript-lexer = { workspace = true }
muscript-syntax-derive = { workspace = true }
