[package]
name = "muscript"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }

muscript-foundation = { workspace = true }
muscript-syntax = { workspace = true }
