[package]
name = "muscript"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
camino = "1.1.6"
clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-chrome = "0.7.1"
walkdir = { workspace = true }

muscript-analysis.workspace = true
muscript-lexer.workspace = true
muscript-foundation.workspace = true
muscript-preprocessor.workspace = true
muscript-syntax.workspace = true
