[package]
name = "stitchkit-archive"
version = "0.1.0"
edition = "2021"

[dependencies]

anyhow = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
bitflags = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

rust-lzo = "0.6.2"

stitchkit-core = { workspace = true }
