[package]
name = "stitchkit"
version = "0.1.0"
edition = "2021"

[dependencies]

anyhow = "1.0.69"
clap = { version = "4.1.4", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
walkdir = "2.3.2"

stitchkit-archive = { workspace = true }
stitchkit-core = { workspace = true }
stitchkit-reflection-types = { workspace = true }
stitchkit-manifest = { workspace = true }

muscript-foundation = { workspace = true }
muscript-frontend = { workspace = true }
